--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,16 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# 
+Data/
+Data/*
+Logs/
+Logs/*
+/Logs
+wandb
+wandb/
+wandb/*
+plmbind/scripts/wandb/*
+plmbind/scripts/wandb
+
